bpo-46712: share more global strings in deepfreeze (gh-32152)

(for gh-90868)